# Vaughan

./: .env.example  .gitignore  Cargo.toml  GIT_CLEANUP_COMPLETE.md  GIT_CLEANUP_PLAN.md  LICENSE  PHASE_F_LITE_SUMMARY.md  PRE_TAURI_CHECKLIST.md  PROJECT_STATUS_SUMMARY.md  README.md  TEST_TOKEN_BALANCES.md  TOKEN_BALANCE_FIX_FINAL.md  TOKEN_BALANCE_FIX_SUMMARY.md  WHAT_TO_TEST_NOW.md  baseline_performance.txt  bench_account_manager.txt  bench_account_output.txt  bench_error.txt  bench_error_2.txt  bench_results.txt  bench_results_final.txt  build_error.txt  build_output.txt  clippy.toml  clippy_deny_warnings.txt  clippy_detailed.txt  clippy_detailed_phase4.txt  clippy_final.txt  clippy_output.txt  clippy_output_phase4.txt  clippy_remaining.txt  clippy_strict_phase4.txt  clippy_warnings.txt  compilation_error_2.txt  compilation_error_3.txt  compilation_log.txt  compile_full.txt  doc_build_fixed.txt  doc_build_output.txt  doc_build_progress.txt  (+39 more)
.cargo/: config.toml
.kiro/specs/: improved_architecture_plan.md
benches/: account_manager_benchmarks.rs  wallet_benchmarks.rs
docs/: API_AGGREGATORS.md  API_KEY_FREE_OPTIONS.md  BLOCK_EXPLORER_APIS.md  CLEANUP_SUMMARY.md  CODE_AUDIT_REPORT.md  CODE_QUALITY_IMPROVEMENTS_COMPLETE.md  CODE_QUALITY_IMPROVEMENT_PLAN.md  COMPREHENSIVE_SECURITY_AUDIT.md  CONSTRUCTOR_ARGS_SUMMARY.md  FILE_STRUCTURE.md  IMPLEMENTATION_CHECKLIST.md  MIGRATION_COMPLETE.md  PASSWORD_DIALOG_TESTING.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PRE_RELEASE_CHECKLIST.md  PRODUCTION_SYSTEM.md  QUICK_REFERENCE.md  RELEASE_READY.md  SECURITY_FIXES_APPLIED.md  TRANSACTION_AND_SECURITY_OVERHAUL_PLAN.md  TRANSACTION_HISTORY.md  UI_INTEGRATION_COMPLETE.md  VERIFICATION_EXAMPLE.md  VERIFICATION_INFO.md  WALLET_INTEGRATION_COMPLETE.md  account_management.md  custom_token_deployment.md  dapp_integration.md  hardware_wallets.md  migration_guide.md  security_best_practices.md
docs/architecture/: DEBLOAT_PLAN.md  DEBLOAT_PROGRESS.md  EXPORT_IMPLEMENTATION_ANALYSIS.md  EXPORT_REBUILD_PLAN.md  GUI_FILES_REFERENCE.md  NON_RUST_CLEANUP_PLAN.md  PRIORITY_2_PROFESSIONAL_PLAN.md  PROFESSIONAL_IMPROVEMENT_PLAN.md  SAFE_REFACTORING_PLAN.md  UNIFIED_ACCOUNT_MANAGEMENT.md  gui_improvements.md  research_contracts.md
docs/development/: BUSINESS_LOGIC_EXTRACTION_COMPLETE.md  D3_NETWORK_CONTROLLER_COMPLETE.md  D4_WALLET_CONTROLLER_COMPLETE.md  D5_PRICE_CONTROLLER_COMPLETE.md  E0.5_FAILURE_ANALYSIS.md  E1_SUMMARY.md  E1_TRANSACTION_HANDLER_BRIDGE_COMPLETE.md  E2_ANALYSIS_AND_BLOCKER.md  E4_COMPLETE_FINAL.md  E4_COMPLETION_SUMMARY.md  E4_WORKING_WALLET_APP_COMPLETE.md  E5_UPDATE_METHOD_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  PHASE5_EXECUTION_PLAN.md  PHASE_2_COMPLETE.md  PHASE_D_COMPLETE.md  PHASE_D_HANDLER_EXTRACTION_SUCCESS.md  PHASE_E1_VALIDATION_COMPLETE.md  PHASE_E2_DEPRECATED_FIELD_REMOVAL_COMPLETE.md  PHASE_E_ANALYSIS.md  PHASE_E_COMPLETE.md  PHASE_E_EXECUTION_PLAN.md  PHASE_E_IMPLEMENTATION_PLAN.md  PHASE_E_PERFORMANCE_OPTIMIZATION_SUCCESS.md  PHASE_E_STATUS_AND_NEXT_STEPS.md  PHASE_E_VALIDATION_COMPLETE.md  PHASE_F_LITE_COMPLETE.md  PRIORITY_1_COMPLETE.md  REFACTORING_ACHIEVEMENTS.md  REFACTORING_COMPLETE.md  SESSION_SUMMARY.md  STAGE4_COMPLETE_SUCCESS.md  STAGE4_FINAL_COMPLETION_SUMMARY.md  STAGE4_HANDLERS_COMPLETE.md  STAGE4_MIGRATION_PLAN.md  STAGE4_PHASE_D_COMPLETE.md  STAGE4_PHASE_E_COMPLETE.md  STAGE4_PROGRESS_UPDATE.md  STAGE4_VERIFICATION_COMPLETE.md  STAGE4_WORKING_WALLET_COMPLETE.md  (+1 more)
docs/features/: ASTERDEX_SETUP.md  BRIDGE_INTEGRATION.md  DEX_IMPLEMENTATION_GUIDE.md  ENHANCED_CUSTOM_TOKENS.md  ENHANCED_DEX_IMPLEMENTATION_COMPLETE.md  GOPULSE_INSPIRED_ENHANCEMENTS.md  HARDWARE_WALLET_INTEGRATION.md  INCOMING_TRANSACTION_MONITORING_SUMMARY.md  META_DEX_AGGREGATOR.md  STAKING_FARMING_FEATURES.md  TRANSACTION_HISTORY_IMPROVEMENTS.md  TRANSACTION_HISTORY_SUMMARY.md  WALLET_EXTENSION_CONNECTOR_PLAN.md
docs/fixes/: ACCOUNT_BALANCE_BUG_FIXED.md  ACCOUNT_SELECTOR_FIX.md  ACCOUNT_SELECTOR_FIXED.md  ACCOUNT_SELECTOR_RELOAD_FIX.md  BALANCE_LOADING_FIX.md  BUTTON_LABELS_FIX.md  CLIPBOARD_PASTE_FIX.md  CONTRACT_DEPLOYMENT_FIX.md  DEPLOYMENT_FIX.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_INTEGRATION_SUMMARY.md  FIX_TRANSACTION_SIGNING_ISSUE.md  KEYSTORE_ACCOUNT_SYNC_FIX.md  LOGO_AND_ACCOUNT_SELECTOR_FIX.md  NETWORK_SELECTION_FIX.md  SEED_BASED_ACCOUNT_SIGNING_FIX.md  SEND_BUTTON_FIX.md  TOKEN_BALANCE_EMPTY_ARRAY_EXPLAINED.md  TOKEN_BALANCE_NETWORK_FIX_COMPLETE.md  TOKEN_BALANCE_NETWORK_ISSUE_ANALYSIS.md  TRANSACTION_BALANCE_ERROR_DIAGNOSTIC.md  TRANSACTION_CONFIRMATION_DIALOG_FIX.md  TRANSACTION_FLOW_COMPLETE_FIX.md  TRANSACTION_PASSWORD_DIALOG_FIX.md  TRANSACTION_PASSWORD_LOOP_FIX.md  (+5 more)
examples/: test_clipboard.rs
scripts/: backup_wallet.sh  rollback_wallet.sh
src/: CustomToken.sol  MinimalERC20.sol  SimpleToken.sol  error.rs  lib.rs  main.rs
tests/: EXPORT_WINDOW_TEST_DOCUMENTATION.md  EXPORT_WINDOW_TEST_SUMMARY.md  account_display_properties.rs  account_manager_integration.rs  account_manager_performance.rs  account_type_detection_tests.rs  account_type_switching_tests.rs  anvil_integration.rs  auth_state_tests.rs  auto_balance_integration.rs  contract_interaction_anvil.rs  controller_properties.rs  controllers_integration.rs  crypto_properties.proptest-regressions  crypto_properties.rs  dead_code_compliance.rs  dependency_compliance.rs  discovery_integration_tests.rs  discovery_property_tests.proptest-regressions  discovery_property_tests.rs  error_properties.proptest-regressions  error_properties.rs  feature_gating_compliance.rs  gui_tx_build.rs  hardware_tests.rs  hardware_wallet_e2e.rs  hardware_wallet_integration.rs  hardware_wallet_performance.rs  hw_simulation.rs  integration_test.rs  interface_properties.rs  keystore_prop_tests.rs  keystore_validation_tests.rs  module_size_compliance.rs  multicall_test.rs  password_dialog_metrics.rs  password_integration_tests.rs  password_validation_tests.proptest-regressions  password_validation_tests.rs  professional_test.rs  (+28 more)
tools/: 51-trezor.rules
zkp2p/: plan.md  task_list.md
(+336 files in other folders)
